--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ $(document).on("contextmenu",function(e){
 		{
 			if(event.button==2)
 			{
-				alert("Contact me on Discord : 3nv0y#3695");
+				alert("Hello there");
 			return false;
 			}
 		}
