--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="Web Developer & Designer">
 <meta name="author" content="Kevinio">
 <meta name="theme-color" content="#1755cf">
-<meta itemprop="image" content="https://i.ibb.co/pwWYyZw/gafull.jpg">
+<meta name="og:image" content="https://i.ibb.co/pwWYyZw/gafull.jpg">
 <title>Kevinio</title>
 
 <link rel="shortcut icon" href="images/ico/fav.ico">
