--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <meta name="keywords" content="Web Developer & Designer">
 <meta name="author" content="Kevinio">
 <meta name="theme-color" content="#1755cf">
-<meta name="og:image" content="https://static.facebook.com/images/whatsapp/www/whatsapp-promo.png">
+<meta property="og:title" content="Test website">
+<meta property="og:description" content="This is the website description. Nice eh?">
+<meta property="og:image" content="https://static.facebook.com/images/whatsapp/www/whatsapp-promo.png">
 <title>Kevinio</title>
 
 <link rel="shortcut icon" href="images/ico/fav.ico">
